# astrologbook

./: .gitignore  IDEAS.org  README.md  alog.py  cli.py  main.py  manifest.py  package-lock.json  package.json  pyproject.toml  tailwindcss.config.js
.github/: dependabot.yml
alog/: __init__.py  graph.py  graphplot.py  models.py  settings.py  utils.py
starmap/: starmap.py
static/: styles.css
static/css/: input.css  output.css
templates/: about.html  index.html
ui/: .env.backup.example  .gitignore  README.md  TODO.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/public/catalogs/: Barnard.json  LBN.json  LDN.json  Messier.json  OpenIC.json  OpenNGC.json  README.md  Sharpless.json
ui/scripts/: setup-uploads.js
ui/src/: middleware.ts  middlewares.ts
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: AladinLite.tsx  EnvironmentPanel.tsx  MoonPhase.tsx  RecommendedTargets.tsx  StarMap.tsx  TargetSearch.tsx  WeatherConditions.tsx  add-object-dialog.tsx  altitude-chart.tsx  annotation-card.tsx  annotation.tsx  astronomy-todo-list.tsx  create-collection-dialog.tsx  data-management-dropdown.tsx  default-breadcrumb.tsx  edit-notes-dialog.tsx  edit-schedule-item-dialog.tsx  empty-state.tsx  enrichCollections.tsx  goal-time-dialog.tsx  header-client.tsx  header.tsx  image-viewer.tsx  import-dialog.tsx  moon-image.tsx  moon.tsx  object-altitude-dialog.tsx  object-list-header.tsx  object-list-item.tsx  observation-log-card-server.tsx  observation-log-card.tsx  optimized-image.tsx  sync-status.tsx  tag-selector.tsx  (+5 more)
(+85 files in other folders)
