[project]
name = "astrologbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "nanoid>=2.0.0",
    "uvicorn>=0.34.0",
]
