[project]
name = "astrologbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.1",
    "astroquery>=0.4.10",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "erewhon-astro==0.7.0",
    "fastapi[standard]>=0.115.12",
    "geopy>=2.4.1",
    "humanize>=4.12.2",
    "jinja2>=3.1.6",
    "nanoid>=2.0.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "pytz>=2025.2",
    "skyfield>=1.52",
    "starplot>=0.15.6",
    "typer>=0.15.2",
    "tzwhere>=3.0.3",
    "uvicorn>=0.34.0",
]
